[project]
name = "bleanser_pura"
version = "0.1.0"
description = "purarue's bleanser modules"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/purarue/bleanser"

[tool.mypy]
pretty = "True"
show_error_context = "True"
show_error_codes = "True"
check_untyped_defs = "True"
namespace_packages = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
disallow_any_generics = "True"
disallow_untyped_calls = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
bleanser_pura = ["py.typed"]

[tool.setuptools]
package-dir = { "" = "src" }
