[project]
name = "bleanser_pura"
version = "0.1.0"
description = "purarue's bleanser modules"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/purarue/bleanser"

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
bleanser_pura = ["py.typed"]

[tool.setuptools]
package-dir = { "" = "src" }
